media/radarr/hd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-hd
  namespace: media
  labels:
    app: radarr-hd
spec:
  ports:
    - port: 7878
      name: radarr-hd
  selector:
    app: radarr-hd
