media/radarr/hd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-hd
  namespace: media
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: radarr-hd.skj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-hd
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr-hd.skj.dev
      secretName: radarr-hd-skj-dev-cert
